[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bot-outbound-backend"
version = "0.1.0"
description = "Instagram outbound DM automation backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy[asyncio]==2.0.49",
    "aiosqlite==0.22.1",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "cryptography==46.0.7",
    "httpx==0.28.1",
    "arq==0.27.0",
    "redis==5.3.1",
    "loguru==0.7.3",
    "python-multipart==0.0.26",
    "email-validator==2.3.0",
    "bcrypt==5.0.0",
    "PyJWT==2.12.1",
    "instagrapi==2.3.0",
    "patchright==1.58.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "anyio==4.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
# L'engine async di app/database.py è un singleton module-level: il pool asyncpg
# lega le connessioni all'event loop. Con loop function-scoped (default), un test
# eredita una connessione di un loop già chiuso dal test precedente ->
# "RuntimeError: Event loop is closed". Un loop condiviso per sessione mantiene il
# pool valido per tutta la suite. Verificato: 376 passed. Marker @pytest.mark.asyncio
# restano espliciti (asyncio_mode strict di default).
asyncio_default_test_loop_scope = "session"
